# Categories

./: .gitignore  README.md  config.properties
client/: Odpowiedzi.md  README.md  config.properties  pom.xml
client/src/main/java/org/categories/: Config.java  Connector.java  GameFrame.java  GameParams.java  Main.java  gameFrame.java
server/: CMakeLists.txt  README.md  cities.txt  config.properties  countries.txt  main.cpp
